--- a/templates/form.html
+++ b/templates/form.html
@@ -3,45 +3,65 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dynamic Checkbox Form</title>
+    <link rel="stylesheet" href="{{url_for('static', filename='/css/style.css')}}">
+
+    <title>Настройка параметров</title>
     <style>
+
         .sub-options {
             display: none;
             margin-left: 20px;
         }
         #id_user{display:none}
+
     </style>
+
 </head>
 <body>
-<h1>Dynamic Checkbox Form</h1>
-<form action="/save/" method="post">
-    <label for="time">Время тренировки(чч:мм):</label> <input type="time" id="time" name="time" required><br>
-
+<h1>Настройка параметров</h1>
+<form action="/save/" method="post"  id="form_kek">
+    <label for="time">Время тренировки(чч:мм):</label> <br><input type="time" id="time" name="time" required><br>
+    <br>
     {% for klass in data %}
-    <label>
-        <input type="checkbox" name="klass_{{klass}}" id="klass_{{klass}}"
+    <div class="top_check">
+    <label >
+        <input  type="checkbox" name="klass_{{klass}}" id="klass_{{klass}}"
                onclick="toggleSubOptions('klass_{{klass}}-suboptions')">
         {{klass}} класс
     </label>
-    <div id="klass_{{klass}}-suboptions" class="sub-options">
+    <div id="klass_{{klass}}-suboptions" class="sub-options form-group">
         {% for tema in data[klass] %}
         <label>
-            <input type="checkbox" name="klass_{{klass}}-suboption{{loop.index0}}">
+            <div class="sub_temka">
+            <input type="checkbox" name="klass_{{klass}}-suboption{{loop.index0}}" class="lox">
             {{tema}}
-        </label><br>
+                </div>
+        </label>
+
         {% endfor %}
     </div>
+        </div>
     <br>
     {% endfor %}
 
 
-    <button type="submit">Submit</button>
+    <button type="submit">Сохранить</button>
     <br>
     <input id="id_user" name="id_user" value="{{id_user}}"><br>
 </form>
 <script>
-     function toggleSubOptions(id) { const subOptions = document.getElementById(id); subOptions.style.display = subOptions.style.display === 'none' ? 'block' : 'none'; } document.querySelectorAll('input[type="checkbox"]').forEach(checkbox => { checkbox.addEventListener('change', (event) => { const targetId = event.target.id + '-suboptions'; const subOptions = document.getElementById(targetId); if (subOptions) { subOptions.style.display = event.target.checked ? 'block' : 'none'; } }); });
+    function toggleSubOptions(id) { const subOptions = document.getElementById(id); subOptions.style.display = subOptions.style.display === 'none' ? 'block' : 'none'; } document.querySelectorAll('input[type="checkbox"]').forEach(checkbox => { checkbox.addEventListener('change', (event) => { const targetId = event.target.id + '-suboptions'; const subOptions = document.getElementById(targetId); if (subOptions) { subOptions.style.display = event.target.checked ? 'block' : 'none'; } }); });
 </script>
+<script>
+        document.getElementById('form_kek').addEventListener('submit', function(event) {
+            const checkboxes = document.querySelectorAll('input[class="lox"]');
+            const anyChecked = Array.from(checkboxes).some(checkbox => checkbox.checked);
 
+            if (!anyChecked) {
+                event.preventDefault();
+                alert('Пожалуйста, выберите хотя бы одну опцию.');
+            }
+        });
+    </script>
 </body>
 </html>
