--- a/templates/save.html
+++ b/templates/save.html
@@ -46,7 +46,7 @@
         <div class="success-icon">✓</div>
         <h1>Настройки успешно сохранены!</h1>
         <p>Вернитесь в Telegram-бота и следуйте дальнейшим инструкциям.</p>
-        <a href="https://t.me/math_repeater_bot" class="back-button">Вернуться в бот</a>
+        <a href="tg://resolve?domain=math_repeater_bot" class="back-button">Вернуться в бот</a>
     </div>
 </body>
 </html>
